# dev

./: ML_pipeline.py  Pipfile  README.md  ToF.py  __init__.py  analyze_depth.py  auto_analysis.py  axial_pitch_align.py  classification_threshold.pkl  create_bscan_snapshots.py  debris_depth.py  detect_peak.py  differentiation.py  extract_rf_features.py  feature_names_classifier.pkl  features_dataset.xlsx  file_paths.py  file_paths.txt  find_surface.py  flaw_data_structure.py  inferencing_script.py  integrated_testing.py  label_encoders_classifier.pkl  output.py  postprocessor.py  predict_flaw_depth.py  predict_flaw_depth_new.py  programmers_guide.MD  pycorrelate_norm.py  pytest.ini  random_forest_classifier_depth_diff.pkl  rf_features_all_flaws_20250610_104318.xlsx  rf_features_all_flaws_20250610_104433.xlsx  run_ptfast.py  scan_data_structure.py  test_ptfast.py  train_rf_debris.py
b_scan_reader/: BScan.py  BScan_anf.py  BScan_csv.py  BScan_daq.py  BScan_reader.py  README.md  bscan_array_to_anf.py  bscan_csv_to_anf.py  bscan_demo.py  bscan_structure_definitions.py  export_bscan_csv.py  export_to_png.py  file_benchmarks.py  file_saving.py  pyproject.toml
b_scan_reader/hex_workshop_structs/: FLAW-ANF-File.hsl  FLAW-DAQ-File.hsl
b_scan_reader/tests/: reference_exports.dvc  test_BScan_reader.py  test_export_anf.py  test_export_daq.py  test_modify_bscan_file.py  test_parsebscan_anf.py  test_parsebscan_daq.py
b_scan_reader/tests/test_parsebscan_anf_data/: axial_positions.csv
db/: db.py  db_utils.py
depth_sizing/: CC_depth_sizing.py  ax_circ_scrape_depth_sizing.py  (+3 more)
(+22 files in other folders)
