[tool.poetry]
name = "b-scan-exporter"
version = "0.1.0"
description = ""
authors = ["nick.stupich <nick.stupich@prolucid.ca>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.2"
tqdm = "^4.62.3"
pandas = "^1.4.1"
pytest = "^7.0.1"
dvc = "^2.9.4"
matplotlib = "^3.5.1"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
